--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,10 +1,10 @@
 <div class="content">
     
     <div class="title">
-        <h1>Livros</h1>
+        <h1>LIVROS</h1>
     </div>
 
-    <button class="mat-elevation-z8" mat-stroked-button color="primary">NOVO LIVRO</button>
+    <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()" mat-stroked-button color="primary">NOVO LIVRO</button>
 
     <div class="mat-elevation-z8 content-table">
         <table class="table" mat-table [dataSource]="livros">
@@ -31,7 +31,7 @@
             <ng-container matColumnDef="acoes">
               <th class="mat-reader" mat-header-cell *matHeaderCellDef> AÇÕES </th>
               <td mat-cell *matCellDef="let row">
-                <a class="edit" href="#">
+                <a class="edit" routerLink="{{ row.id }}/update">
                   <i class="material-icons">edit</i>
                 </a>  
                 <a class="delete" href="#">
