--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -22,9 +22,9 @@
             <ng-container matColumnDef="livros">
               <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
               <td mat-cell *matCellDef="let row">
-                <a class="livros">
+                <a class="livros" routerLink="{{ row.id }}/read">
                   <i class="material-icons">book</i>
-                </a>  
+                </a>
               </td>
             </ng-container>
           
