--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,8 +1,6 @@
 <mat-toolbar class="header">
     <span>
+        Bookstore
         <img src="./assets/img/book.png" alt="Livro">
-    </span>
-    <span>
-        <h1>Bookstore Application</h1>
     </span>
 </mat-toolbar>
