--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     
     <div class="title">
-        <h1>LIVROS</h1>
+        <h1>Livros</h1>
     </div>
 
     <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()" mat-stroked-button color="primary">NOVO LIVRO</button>
