--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -1,18 +1,14 @@
 img {
-    height: 3rem;
+    height: 2rem;
 }
 
 .header {
-    justify-content: center;
-    height: 10%;
+    justify-content: left;
+    height: 8%;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 span {
     display: flex;
-    align-items: center;
-}
-
-h1 {
-    padding-left: 1.2rem;
-    font-size: 1.5rem;
 }
