--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.css
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.css
@@ -1,21 +1,22 @@
 .content {
-    width: 90%;
+    width: 80%;
     margin: 1.4rem auto;
 }
 
 .title {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 0.5rem;
 }
 
 .title h1 {
     font-size: 1.5rem;
     color: black;
-    font-weight: 500;
+    font-weight: 450;
+    text-align: center;
 }
 
 button {
-    margin-bottom: 0.7rem;
+    margin-bottom: 0.5rem;
 }
 
 .table {
