--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     
     <div class="title">
-        <h1>Categoria</h1>
+        <h1>Categorias</h1>
     </div>
 
     <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-stroked-button color="primary">NOVA CATEGORIA</button>
@@ -25,7 +25,7 @@
             </ng-container>
 
             <ng-container matColumnDef="livros">
-              <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+              <th mat-header-cell *matHeaderCellDef>LIVROS</th>
               <td mat-cell *matCellDef="let row">
                 <a class="livros" routerLink="{{ row.id }}/livros">
                   <i class="material-icons">book</i>
